refactor: update README

--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
 
   <body>
     <h1>Flexbox in practice</h1>
-    <p>Use flexbox to achieve the following UI requirements:</p>
+    <p>
+      For this challenge you need to use Flexbox to build each of the following
+      exercises.
+    </p>
+    <p><b>Check the README for instructions.</b></p>
     <div>
       <h2>Exercise 1</h2>
-      <p>The following list items are the navigation for a site.</p>
-      <ul>
-        <li>They should be laid out as a row</li>
-        <li>There should be an equal amount of space between each item</li>
-      </ul>
 
       <div class="nav-items">
         <ul>
@@ -28,17 +27,13 @@
     </div>
     <div>
       <h2>Exercise 2</h2>
-      <p>Center the element inside the container.</p>
+
       <div class="parent">
         <div class="child">Center me</div>
       </div>
     </div>
     <div>
       <h2>Exercise 3</h2>
-      <p>
-        The last row (item stock) should be aligned at the bottom of the
-        container.
-      </p>
 
       <div class="card-3">
         <div class="child-1">Cactus spike</div>
@@ -49,16 +44,13 @@
 
     <div>
       <h2>Exercise 4</h2>
-      <p>Align items to get this UI:</p>
-      <img class="img-demo" src="./images/ex4-demo.png" />
 
-      <p>Hint: you can reuse something from Exercise 3</p>
       <div class="card-4">
         <img
           class="card-img"
           src="https://i.picsum.photos/id/1011/200/200.jpg?hmac=ISwJXaLKDOtBGE_n3myoHUev_P_OH3zpWqLx0yHp0pY"
         />
-        <div>
+        <div class="card-text-wrapper">
           <div>Kayak ride</div>
           <div>USD 25</div>
           <div><b>3</b> spots left</div>
@@ -69,11 +61,6 @@
 
     <div>
       <h2>Exercise 5</h2>
-      <p>
-        We want the items to wrap but to take up the space they need on a
-        line-by-line basis like in the following image:
-      </p>
-      <img class="img-demo" src="./images/ex5-demo.png" />
 
       <ul class="tags">
         <li>Potato</li>
